# vakula

./: .gitignore  Dockerfile  README.md  docker-compose.sample.yml  docker-compose.yml  index.html  pyproject.toml  vakula_launcher.py
docs/: architecture-diagram.md  architecture-services.puml
example_data/: smaller_subset.json  weather_stations_hr.json
frontend/: index.html  styles.css
service-broker/: .env.example  README.md  requirements.txt  server.py
service-degrader/: .env.example  README.md  requirements.txt  server.py
service-gateway/: .env.example  README.md  requirements.txt  server.py
service-orchestrator/: .env.example  README.md  server.py
service-station/: .env.example  README.md  requirements.txt  server.py
service-telegram/: .env.example  README.md  server.py
vakula/: __init__.py  degrade_service.py  gateway_service.py  station_service.py  weather_broker.py
vakula/data/: croatia_stations.json  popis_osnovne_mreze_meteoroloskih_postaja.xlsx
vakula_common/: __init__.py  env.py  http.py  logging.py  models.py  modules.py
