[project]
name = "vakula"
version = "0.1.0"
description = "Weather station microservices sandbox (gateway + broker + stations + adjust)"
authors = [
    { name = "Josip Seketa", email = "jseketa@student.unipu.hr" }
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.122.0,<0.123.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "aiohttp (>=3.9.5,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
